Update to latest dependencies, etc.

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "node_rss_server",
-  "version": "1.0.0",
-  "description": "A simple server to convert RSS feed into JSON",
+  "version": "1.0.1kan",
+  "description": "Convert RSS into JSON with node.js.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ayush Sharma",
+  "author": "Kristopher A. Nelson (originally Ayush Sharma)",
   "license": "ISC",
   "dependencies": {
-    "express": "4.15.2",
-    "rss-to-json": "1.0.2"
+    "express": "^4.16.3",
+    "rss-to-json": "^1.0.4"
+  },
+  "engines": {
+    "node": "10.7.0"
   }
 }
